dark mode fix

--- a/portfolio-project/src/index.css
+++ b/portfolio-project/src/index.css
@@ -7,8 +7,8 @@
   line-height: 1.5;
   font-weight: 400;
 
-  /* color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87); */
+  color-scheme: light dark;
+  color: rgba(35, 42, 44, 1);
   background-color: rgba(35, 42, 44, 1);
 
   font-synthesis: none;
